[package]
name = "fiv-http"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = {version = "0.59.0", features = ["Win32_Networking_WinSock", "Win32_System_IO", "Win32_Security", "Win32_System_Threading"]}
fiv-mac={git = "https://github.com/Fives-55555/fiv-mac.git"}
#fiv-log={git = "https://github.com/Fives-55555/fiv-log.git"}
#fiv={git="https://github.com/Fives-55555/fiv-lib.git"}
#rand="0.8.5"

[features]
multithreaded = []