[package]
name = "fiv-net"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = {version = "0.61.1", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_Security", "Win32_System_IO", "Win32_System_Threading"]}
#windows = {version = "0.61.1", features = ["Win32_Networking_WinSock", "Win32_System_IO", "Win32_Security", "Win32_System_Threading"]}
windows-result = "0.3.2"

[features]
multithreaded = []